--- a/SOFT252/appointmentList.json
+++ b/SOFT252/appointmentList.json
@@ -1,3 +1,1 @@
-[
-    {"doctor" : "0", "patient" : "0", "timeslot" : "3", "notes" : "Patient was very sleepy"}
-]
+[{"doctor":"Gemma","notes":"","patient":"John","timeslot":"8"}]
